--- a/TestJsAngDotNet/packages.config
+++ b/TestJsAngDotNet/packages.config
@@ -4,8 +4,11 @@
   <package id="AngularJS.Core" version="1.5.7" targetFramework="net452" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="Castle.Core" version="3.3.0" targetFramework="net452" />
+  <package id="Castle.Windsor" version="3.3.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="EntityFramework.ru" version="6.1.3" targetFramework="net452" />
+  <package id="FluentMigrator" version="1.6.2" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.1.0" targetFramework="net452" />
@@ -62,6 +65,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Npgsql" version="2.2.7" targetFramework="net452" />
+  <package id="Npgsql.EntityFramework" version="2.2.7" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
